design/templates/OpenGame/_template.css
/* ... */
/* iPads (landscape) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : landscape) {
  /* Styles */
}

/* iPads (portrait) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : portrait) {
  /* Styles */
}

#unit_info {
  /*display: table;*/
  vertical-align: top;
  text-align: center;

  width: 100%;
}
#unit_info_image_wrapper {
  /*display: table-header-group;*/
  vertical-align: top;
  height: 12em;
  width: 12em;
  position: relative;
  margin: 0.2em;
  float: left;
}
#unit_info_image {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  border: 0;
}
#unit_info_name {
  font-size: 1em;
  vertical-align: top;
  text-align: center;
  left: 0;
  top: 0;
  width: 100%;
  position: absolute;
}
#unit_level {
  font-size: 1em;
  bottom: 0;
  left: 0;
  width: 100%;
  position: absolute;
  text-align: center;
}
#unit_description_wrapper {
  display: table-header-group;
}
#unit_info_extra_switch_wrapper {
  display: table-row-group;
}
#unit_balance {
  display: table-footer-group;
  vertical-align: top;
  text-align: center;
  border: 0;
  margin: 0.2em;
  min-height: 12em;
}

#unit_miniatures_wrapper {
  vertical-align: top;
  height: 10em;
  width: 10em;
  position: relative;
  margin: 0.2em;
  float: left;
}

@media only screen
and (max-width : 51.9375em) {
  /* Styles */
  #unit_table { /* 3 preview */
    width: 37em;
  }
  /*#unit_description_wrapper {*/
    /*clear: both;*/
  /*}*/
  /*#unit_info_extra_switch_wrapper {*/
    /*display: table-row-group;*/
  /*}*/
}

/* Desktops and laptops medium-res */
@media only screen
and (min-width : 52em) {
  /* Styles */
  #unit_table { /* 4 preview */
    width: 48.5em;
  }
  #unit_info_extra_switch_wrapper {
    /*display: table-header-group;*/
  }
  /*#unit_info_extra_switch_wrapper {*/
    /*display: table-row-group;*/
  /*}*/
}

@media only screen
and (min-width : 60em) {
  /* Styles */
  #unit_table { /* 5 preview */
    width: 60.5em;
  }
}

@media only screen
and (min-width : 68em) {
  /* Styles */
  #unit_table { /* 6 preview */
    width: 72.5em;
  }
  #unit_balance {
    float: right;
  }
}

@media only screen
and (min-width : 76.5em) {
  /* Styles */
  #unit_table { /* 7 preview */
    width: 84.5em;
  }
}

/* Desktops and laptops ----------- */
@media only screen
and (min-width : 1224px) { /* 76.5em*/
  /* Styles */
}

/* Large screens ----------- */
@media only screen
and (min-width : 1824px) {
  /* Styles */
}

/* iPhone 4+ ----------- */
@media
only screen and (-webkit-min-device-pixel-ratio : 1.5),
only screen and (min-device-pixel-ratio : 1.5) {
  /* Styles */
}


#unit_description_wrapper {
  min-height: 12em;
}

#unit_description_wrapper:before {
  content: "";
  width: 20em;
  display: block;
  overflow: hidden;
  /* For Demonstration */
  border: 1px solid green;
}


textarea {
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
}

input, textarea, button {
  font-weight: bold !important;
}

.subheader, tr.subheader > td, tr.subheader > th {
  background: #233452;
}

.note_coordinates {
  color: #00B7F3;
}

.income_with_fleet {
  color: #80a0C0;
}

/* Universe/Galaxy ---------------------------------------------------------------------------------------------------*/
.universe_main > tbody > tr > td, .universe_main > tbody > tr > th {
  white-space: nowrap;
  vertical-align: middle;
}

.uni_show_planet, .uni_show_debris, .uni_show_user, .uni_show_ally {
  cursor: pointer;
}

.uni_show_user {
  min-width: 12em;
}

.uni_show_planet {
  width: 2.75em;
  max-width: 2.75em;
}
.uni_show_planet > div {
  position: relative;
  width: 2.75em;
  max-width: 2.75em;
}
.uni_show_planet > div > :first-child {
  position: absolute;
  top: 0;
  left: 0;
  width: 2.75em;
  max-width: 2.75em;
}
.uni_show_planet > div > :nth-child(2) {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.uni_show_debris {
  background-image: none;
  max-width: 60px;
  width: 60px;
  height: 100%;
}
.uni_show_debris > div {
  margin:auto;
  position: relative;
  height: 30px;
  width: 30px;
}
.uni_show_debris > div > :first-child {
  position: absolute;
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}
.uni_show_debris > div > :nth-child(2) {
  position: absolute;
  bottom: 0;
  right: 0;
}

/* Empire overview -------------------------------------------------------------- */
[go] {
  cursor: pointer;
}

td[go]:hover { /* Skin specific */
  background-color: #415680;
}

[name=save_production] {
  float: right;
}

tr[prod_mode] > th:first-child {
  text-align: left;
  position: relative;
}

tr[prod_mode] > td:first-child {
  text-align: center;
}

tr[prod_mode] > th:first-child > span  {
  position: absolute;
  top: 6px;
}

tr[prod_mode] > :not(:first-child) {
  text-align: center;
  position: relative;
  z-index: 100;
}
/* Production builder filler - i.e. production % for mine etc */
tr[prod_mode] > :not(:first-child) > span[style] {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  z-index: 200;
}

tr[prod_mode] > [ecs]:not(:first-child) {
/* Standard single-height empire cell */
  height: 1.181818em;
}
/* Double-height empire cell - i.e. for Mines */
tr[prod_mode] > [ecd]:not(:first-child), tr[prod_mode] > [ecd]:not(:first-child) > span[style] {
  height: 3.181818em;
}
tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire cell */
  z-index: 300;
  position: relative;
}


/* Menu ------------------------------------------------------------------------- */
#left_menu {
  margin: 5px 10px 0 5px;
  text-align: left;
  z-index: 999;
}

#left_menu_show {
  /*left: 0;*/
  /*top: 0;*/
  /*width: 140px;*/
  /*position: fixed;*/
  z-index: 9999;
}

#left_menu tr, #left_menu td, #left_menu th {
  height: 16px;
}

#menu_show_hidden {
  color: yellow;
  cursor: pointer;
}
/* ... */

